argo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  namespace: argocd-tests
  labels:
    name: web-server
    tier: testing
spec:
  replicas: 2
  selector:
    matchLabels:
      server: web-server
      tier: testing
  template:
    metadata:
      namespace: argocd-tests
      labels:
        server: web-server
        tier: testing
    spec:
      containers:
      - name: web-server
        image: nginx
