argo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server
  namespace: argocd-tests
spec:
  ports:
  - port: 80
  selector:
    server: web-server
    tier: testing
