argo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    server: web-server
  name: web-server
  namespace: argocd-tests
spec:
  tls:
    - hosts:
      - tarjeta-k8s.minube.cr
      secretName: tarjeta-k8s-minube-cr
  ingressClassName: nginx
  rules:
  - host: tarjeta-k8s.minube.cr
    http:
      paths:
      - backend:
          service:
            name: web-server
            port:
              number: 80
        path: /
        pathType: Prefix
